2007-10-14  Wakaba  <wakaba@suika.fam.cx>

	* Atom.pm, HTML.pm: Support for |html:nest|, |html:datatemplate|,
	and |html:rule| elements.

2007-09-24  Wakaba  <wakaba@suika.fam.cx>

	* Atom.pm (atom:link@title): Definition was missing.

2007-09-24  Wakaba  <wakaba@suika.fam.cx>

	* Atom.pm (hreflang): Checker is implemented.
	(AtomDateConstruct): Checking for content is implemented.

2007-09-09  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: Support for language tag validation.

2007-08-25  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm (head, noscript): Treatement for invalid |meta|
	elenments are changed as per HTML5 revision 1018.

2007-08-17  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: Raise new errors if |base| is following
	URI attributes or hyperlink attributes.

2007-08-17  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: Support for |noscript| in |head|.  Make an
	error for |noscript| in XML document.

2007-08-08  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm ($HTMLURIsAttrChecker): Syntax of error |type|
	value are changed for the ease of error message catalog
	lookup.

2007-08-05  Wakaba  <wakaba@suika.fam.cx>

	* Atom.pm: |link|-related checks are added; |type|
	media type checks are added.  |hreflang| now warns
	as unimplemented.

2007-08-05  Wakaba  <wakaba@suika.fam.cx>

	* Atom.pm: Checker for all elements are defined (with
	a number of "TODO"s).

2007-08-05  Wakaba  <wakaba@suika.fam.cx>

	* Atom.pm: New Perl module.

2007-08-04  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: New Perl module, split from |Whatpm/ContentChecker.pm|.

	* ChangeLog: New file.