@@ -3581,19 +3581,16 @@ id=""><span id=""></span></p>
 #data
 <script defer="" async="" xmlns="http://www.w3.org/1999/xhtml"/>
 #errors
-/script/@async;attribute not allowed
 /script;script:text/javascript;unsupported
 
 #data
 <script defer="defer" async="async" xmlns="http://www.w3.org/1999/xhtml"/>
 #errors
-/script/@async;attribute not allowed
 /script;script:text/javascript;unsupported
 
 #data
 <script src="" defer="" async="" xmlns="http://www.w3.org/1999/xhtml"/>
 #errors
-/script/@async;attribute not allowed
 
 #data
 <event-source xmlns="http://www.w3.org/1999/xhtml"/>
