@@ -1,7 +1,7 @@
 1..888
 # Running under perl version 5.008007 for linux
-# Current time local: Wed Oct 17 19:02:21 2007
-# Current time GMT:   Wed Oct 17 10:02:21 2007
+# Current time local: Tue Oct 23 20:26:00 2007
+# Current time GMT:   Tue Oct 23 11:26:00 2007
 # Using Test.pm version 1.25
 ok 1
 ok 2
