@@ -1,3 +1,8 @@
+2007-10-23  Wakaba  <wakaba@suika.fam.cx>
+
+	* content-model-2.dat: <script async defer> is now conforming (HTML5
+	revision 1085).
+
 2007-10-14  Wakaba  <wakaba@suika.fam.cx>
 
 	* content-model-1.dat, content-model-2.dat: New test
