@@ -1,3 +1,8 @@
+2007-10-23  Wakaba  <wakaba@suika.fam.cx>
+
+	* HTML.pm: Make <script async defer> conforming (HTML5
+	revision 1085).
+
 2007-10-14  Wakaba  <wakaba@suika.fam.cx>
 
 	* Atom.pm, HTML.pm: Support for |html:nest|, |html:datatemplate|,
